--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ rustyline = "6.0.0"
 log = "0.4.8"
 chrono = "0.4"
 postgres = { version = "0.17.2", features=["with-chrono-0_4"] }
+time = "*"
 clap = "*"
 nalgebra = "*"
