--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ chrono = "0.4"
 rand = "0.7.3"
 phf = { version = "0.8", features = ["macros"] }
 postgres = { version = "0.17.2", features=["with-chrono-0_4"] }
+postgres-types = { version = "*", features=["derive"] }
 time = "*"
 clap = "*"
 nalgebra = "*"
