--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ lazy_static = "1.4.0"
 css-color-parser = "0.1.2"
 rustyline = "6.0.0"
 log = "0.4.8"
+regex = "1.3.7"
 chrono = "0.4"
 rand = "0.7.3"
 phf = { version = "0.8", features = ["macros"] }
