--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,13 @@ regex = "1.3.7"
 chrono = "0.4"
 rand = "0.7.3"
 phf = { version = "0.8", features = ["macros"] }
-postgres = { version = "0.17.2", features=["with-chrono-0_4"] }
-postgres-types = { version = "*", features=["derive"] }
-rusqlite = { version = "0.23.1", features = ["bundled"] }
+r2d2_sqlite = { git = "https://github.com/MrShiposha/r2d2-sqlite.git" }
+r2d2_postgres = { git = "https://github.com/MrShiposha/r2d2-postgres.git" }
+r2d2 = "*"
 threadpool = "1.7.1"
+rusqlite = "*"
+postgres = "*"
+postgres-types = { version = "*", features=["derive"] }
 num_cpus = "*"
 time = "*"
 clap = "*"
