--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-kiss3d = "0.23"
+kiss3d = "0.25.0"
+nalgebra = "*"
 structopt = "0.3.13"
 lazy_static = "1.4.0"
 css-color-parser = "0.1.2"
@@ -24,7 +25,7 @@ postgres = "*"
 postgres-types = { version = "*", features=["derive"] }
 time = "*"
 clap = "*"
-nalgebra = "*"
 ptree = "0.3.0"
 csv = "1.1.3"
 serde = { version = "1.0.115", features = ["derive"] }
+lr-tree = { git = "https://github.com/MrShiposha/lr-tree.git" }
