--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ rand = "0.7.3"
 phf = { version = "0.8", features = ["macros"] }
 r2d2_postgres = { git = "https://github.com/MrShiposha/r2d2-postgres.git" }
 r2d2 = "*"
-threadpool = "1.7.1"
+rayon = "1.4.0"
 postgres = "*"
 postgres-types = { version = "*", features=["derive"] }
 time = "*"
@@ -29,3 +29,4 @@ ptree = "0.3.0"
 csv = "1.1.3"
 serde = { version = "1.0.115", features = ["derive"] }
 lr-tree = { git = "https://github.com/MrShiposha/lr-tree.git" }
+itertools = "0.9.0"
