--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,4 +27,6 @@ ptree = "0.3.0"
 csv = "1.1.3"
 serde = { version = "1.0.115", features = ["derive"] }
 lr-tree = { git = "https://github.com/MrShiposha/lr-tree.git" }
+petgraph = "*"
 itertools = "0.9.0"
+approx = "*"
